--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/react": "^19.2.8",
     "tsup": "^8.5.1",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "react-native": "0.72.4"
   }
 }
