--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uioh",
-  "version": "1.0.1",
-  "sideEffects": false,
+  "version": "1.0.2",
+  "type": "module",
   "main": "./dist/web/index.cjs",
   "module": "./dist/web/index.js",
   "types": "./dist/index.d.ts",
